package comportamiento.iterator;

public interface List {
  Iterator iterator();
}
